Worked through first 2 exercises, and started the third

--- a/tex/exam.tex
+++ b/tex/exam.tex
@@ -51,7 +51,8 @@
 \newpage
 
 \part{Results and Discussion}
-%\input{./problem2}
+\input{./problem2A}
+\input{./problem2B}
 %\input{./problem3}
 
 %\newpage
