Did three first exercises, without any writing yet

--- a/tex/exam.tex
+++ b/tex/exam.tex
@@ -53,7 +53,7 @@
 \part{Results and Discussion}
 \input{./problem2A}
 \input{./problem2B}
-%\input{./problem3}
+\input{./problem2C}
 
 %\newpage
 %\part{Conclusion}
