--- a/tex/problem2A.tex
+++ b/tex/problem2A.tex
@@ -14,12 +14,12 @@
 	\label{fig:Infected}
 \end{figure}
 
-\begin{figure}[htb]
-	\centering
-	\includegraphics[width=0.8\columnwidth]{../fig/vac.pdf}
-	\caption{The effect of vaccination, with $\varphi = 0.3$.}
-	\label{fig:vaccination}
-\end{figure}
+%\begin{figure}[htb]
+%	\centering
+%	\includegraphics[width=0.8\columnwidth]{../fig/vac.pdf}
+%	\caption{The effect of vaccination, with $\varphi = 0.3$.}
+%	\label{fig:vaccination}
+%\end{figure}
 
 
 \begin{table}[htb]
@@ -30,7 +30,7 @@
 		Parameter & value & $0.2 - \max_{t\in[0,\infty]} R(t)$ & Initial $\log$-slope \\
 		\midrule
 		$\beta$ & $0.28020370$ & $8.319\cdot 10^{-7}$ & --- \\
-		$R(0)$  & $0.42410713$ & --- & $0.04393859$ \\
+		$R(0)$  & $0.59987499$ & --- & $-1.74\cdot 10^{-15}$ \\
 		\bottomrule
 	\end{tabular}
 \end{table}
