Did problem 2D partially - think I have a working solution

--- a/tex/problem2C.tex
+++ b/tex/problem2C.tex
@@ -1,3 +1,5 @@
+\section{Problem 2C: Stochastic SEIIaR model`}
+
 \begin{figure}[htb]
 	\centering
 	\includegraphics[width=0.8\columnwidth]{../fig/2Ca_SEIIaR.pdf}
