Wrote text for problems A-C, started testing and documenting D

--- a/tex/exam.tex
+++ b/tex/exam.tex
@@ -8,7 +8,7 @@
 	\thispagestyle{titlepage}
 	
 	\centering{
-		\Huge{\textbf{ Exam title }}
+		\Huge{\textbf{ Exam: Epidemic modelling }}
 	}
 
 	\vspace{4mm}
@@ -54,6 +54,8 @@
 \input{./problem2A}
 \input{./problem2B}
 \input{./problem2C}
+\input{./problem2D}
+\input{./problem2E}
 
 %\newpage
 %\part{Conclusion}
