--- a/tex/references.bib
+++ b/tex/references.bib
@@ -1,24 +1,19 @@
-@article{Langtangen2016,
-	author = {Langtangen, Hans Petter and Pedersen, Geir K},
-	doi = {10.1007/978-3-319-32726-6},
-	file = {:Users/jess/Documents/Mendeley Desktop/Langtangen, Pedersen{\_}2016{\_}Scaling of Differential Equations.pdf:pdf},
-	isbn = {978-3-319-32725-9},
-	title = {{Scaling of Differential Equations}},
-	url = {https://github.com/hplgit/scaling-book},
-	year = {2016}
-}
-
 @misc{sheet,
 	author = {Nordam, Tor},
 	year = 2021,
-	title = {{Exercise 3 - Computational physics TFY4235}}	
+	title = {{Exam 2021 - Computational physics TFY4235}}	
 }
 
-@misc{tdma,
-	title = {{Tridiagonal matrix algorithm - Wikipedia}},
-	url = {https://en.wikipedia.org/wiki/Tridiagonal_matrix_algorithm},
-	urldate = {2021-04-26},
-	note = {Available \href{https://en.wikipedia.org/wiki/Tridiagonal_matrix_algorithm}{here}}
+@book{Wassermann,
+	abstract = {This book is for people who want to learn probability and statistics quickly. It brings together many of the main ideas in modern statistics in one place. The book is suitable for students and researchers in statistics, computer science, data mining and machine learning. This book covers a much wider range of topics than a typical introductory text on mathematical statistics. It includes modern topics like nonparametric curve estimation, bootstrapping and classification, topics that are usually relegated to follow-up courses. The reader is assumed to know calculus and a little linear algebra. No previous knowledge of probability and statistics is required.},
+	address = {New York},
+	author = {Wasserman, Larry},
+	doi = {10.1007/978-0-387-21736-9},
+	isbn = {978-1-4419-2322-6},
+	issn = {1431-875X},
+	keywords = {01624 103 springer book theory engineering science},
+	publisher = {Springer},
+	series = {Springer Texts in Statistics},
+	title = {{All of Statistics: A Concise Course in Statistical Inference}},
+	year = {2004}
 }
-
-@book{suli, place={Cambridge}, title={An Introduction to Numerical Analysis}, DOI={10.1017/CBO9780511801181}, publisher={Cambridge University Press}, author={Süli, Endre and Mayers, David F.}, year={2003}}
