--- a/tex/problem2C.tex
+++ b/tex/problem2C.tex
@@ -1,4 +1,8 @@
-\section{Problem 2C: Stochastic SEIIaR model`}
+\section{Problem 2C: Stochastic SEIIaR model}
+
+\subsection{a)}
+
+The time-development of all the variables in the SEIIaR model is shown in figure \ref{fig:SEIIaR}, showing $10$ realisations of the simulation. To compare it easily with the deterministic model, we contract $E,I,I_a$ into one variable, so that they together represent all the infected people. The solutions of the deterministic model are shown together with the contracted versions of these simulations in figure \ref{fig:SEIIaR_compare}. 
 
 \begin{figure}[htb]
 	\centering
@@ -14,9 +18,59 @@
 	\label{fig:SEIIaR_compare}
 \end{figure}
 
+One prominent feature to notice here, is that the process overall seems to be \textit{slower}, in the sense that it takes longer for people to get infected and eventually recover, but the peaks and asymptotic behaviours seem to align quite closely. This is probably due to the fact that this model includes a period in which people are infected but not yet able to infect anybody else, an incubation period of typical length $\tau_E = 3 \, \mathrm{days}$. This will naturally delay the process, but it should not affect the peak nor the asymptotic behaviour. Ultimately, this shows that the SEIIaR model adds another layer of realism to our model in the sense that people do not get sick right away.
+
+To test that the implementation is correct --- by comparing with the deterministic and stochastic SIR model --- we adjust the parameters of the SEIIaR to $\beta = 0.25$, $r_s = 1$, $r_a = 1$, $\tau_E = 0$, $\tau_I= 10$ and start with $10$ out of $100 \, 000$ people initially infected. The results of doing $1000$ such simulations and performing the average of the stochastic models is shown in figure \ref{fig:comparison_SIR}. This shows that the two stochastic models are more or less identical, as expected.
+
+\begin{figure}[htb]
+	\centering
+	\includegraphics[width=0.8\columnwidth]{../fig/test_comparison.pdf}
+	\caption{Solution of the stochastic SEIIaR-equations compared with the stochastic and deterministic SIR-equations for the case of identical parameters.}
+	\label{fig:comparison_SIR}
+\end{figure}
+
+\subsection{b) Probability of outbreak dependence on $r_s$}
+
+The variable $r_s$ describes how infectious a person is when he is in the infection state. Reducing this constant below $1$ can therefore correspond to emulating the degree of self-isolation when people are symptomatic. We investigate the probability of an outbreak as a function of this self-isolation-rate $r_s$ by the following procedure (which is essentially the same as that shown in $2Bb$ expect we are now finding the probability as a function of $r_s$):
+
+\begin{algorithm}[htb]
+	Choose the parameters of the model as those given in the exam sheet \cite{sheet}, but with $T = 30 \, \mathrm{days}$\footnote{As the typical infection time is still $10$ days, I assume 50 days to be more than sufficient for detecting an outbreak in the stochastic model.}. \;
+	Choose a batch-size $B$.\;
+	Choose a number of values $n$ of $r_s$ to try\;
+	Select $n$ values of $r_s$, equally spaced between $0.001$ and $1$ :
+		$$
+			\mathbf{R} = [R_1, \dots R_n]
+		$$
+	\For{$i = 1,2,\dots, n$}{
+		Initialise an empty vector of length $B$: $\mathbf{X} = [0,\dots,0]$.\;
+		\For{$n = 1,\dots, B$}
+		{
+			Run the simulation with $r_s = R_i$.\;
+			Calculate the \texttt{slope} in the semi-log axes for $I(t)$.\;
+			\eIf{$\texttt{slope} <= 0$}
+			{$X_n = 0$}
+			{$X_n = 1$}
+		}
+		Estimate the probability of an outbreak for $I$ initially infected by 
+		$$
+		p \coloneqq P(\mathrm{outbreak}|r_s) = \frac{1}{B} \sum_{n= 1}^{B} X_n. \;
+		$$	
+		Calculate the standard deviation of the estimate by 
+		$$
+		\sqrt{\mathrm{Var}(\hat{p})} = \sqrt{\frac{p(1-p)}{B}}.
+		$$
+	}
+	\caption{Calculating the probability of an outbreak as a function of $r_s$.}
+\end{algorithm} 
+
+The results of this calculation using a batch size of $B = 500$ and $100$ values of $r_s$ are shown in figure \ref{fig:rs_prob}. The behaviour is as expected: when people are hardly infectious when symptomatic the probability of an outbreak is close to $0$. This is also probably also a result of the fact that $r_a = 0.1$, i.e. it is not particularly likely to infect anyone when you are asymptomatic. If $r_a$ and $f_a$ was higher, one would expect the probability distribution to stagnate at some finite value when $r_s \to 0$, or at least go to $0$ slower. This is demonstrated in the same figure, where we set $r_a = 1$ and perform the same test as above. This again is an intuitive confirmation that the model behaves as expected, and therefore is correctly implemented.
+
 \begin{figure}[htb]
 	\centering
 	\includegraphics[width=0.8\columnwidth]{../fig/2Cb_probs.pdf}
 	\caption{Probability of an outbreak as a function of $r_s$.}
 	\label{fig:rs_prob}
 \end{figure}
+
+
+\clearpage
